# easylogger

./: AGENTS.md  prd.md  pyproject.toml
easylogger/: cli.py  models.py  scanner.py  view_engine.py  view_store.py  web_api.py
easylogger/web/: app.jsx  index.html  styles.css
tests/: test_cli.py  test_frontend_e2e.py  test_scanner.py  test_view_engine.py  test_view_store.py  test_web_api.py
