[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easylogger"
version = "0.1.0"
description = "Minimal JSON logger explorer"
readme = "prd.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0",
  "playwright>=1.49,<2.0",
]

[project.scripts]
easylogger = "easylogger.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["easylogger*"]

[tool.setuptools.package-data]
easylogger = ["web/*.html"]
